# Mserver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sloppy_build.sh
common/: dongaLogger.cpp  dongaLogger.h  pch.H
src/: CommonInclude.h  main.cpp
